@@ -85,7 +85,7 @@ name|HttpServletResponse
 name|response
 decl_stmt|;
 specifier|private
-name|GZIPResponseStream
+name|ServletOutputStream
 name|os
 decl_stmt|;
 specifier|private
@@ -127,6 +127,13 @@ name|int
 name|status
 parameter_list|)
 block|{
+name|super
+operator|.
+name|setStatus
+argument_list|(
+name|status
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|status
@@ -288,9 +295,20 @@ condition|(
 name|os
 operator|!=
 literal|null
+operator|&&
+operator|(
+name|os
+operator|instanceof
+name|GZIPResponseStream
+operator|)
 condition|)
 block|{
+operator|(
+operator|(
+name|GZIPResponseStream
+operator|)
 name|os
+operator|)
 operator|.
 name|finish
 argument_list|()
@@ -323,9 +341,20 @@ condition|(
 name|os
 operator|!=
 literal|null
+operator|&&
+operator|(
+name|os
+operator|instanceof
+name|GZIPResponseStream
+operator|)
 condition|)
 block|{
+operator|(
+operator|(
+name|GZIPResponseStream
+operator|)
 name|os
+operator|)
 operator|.
 name|resetBuffer
 argument_list|()
@@ -361,9 +390,20 @@ condition|(
 name|os
 operator|!=
 literal|null
+operator|&&
+operator|(
+name|os
+operator|instanceof
+name|GZIPResponseStream
+operator|)
 condition|)
 block|{
+operator|(
+operator|(
+name|GZIPResponseStream
+operator|)
 name|os
+operator|)
 operator|.
 name|resetBuffer
 argument_list|()
@@ -463,6 +503,13 @@ name|IOException
 block|{
 if|if
 condition|(
+name|os
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
 operator|!
 name|response
 operator|.
@@ -472,15 +519,11 @@ operator|&&
 name|compress
 condition|)
 block|{
-if|if
-condition|(
-name|os
-operator|==
-literal|null
-condition|)
-block|{
 name|os
 operator|=
+operator|(
+name|ServletOutputStream
+operator|)
 operator|new
 name|GZIPResponseStream
 argument_list|(
@@ -488,19 +531,20 @@ name|response
 argument_list|)
 expr_stmt|;
 block|}
-return|return
-name|os
-return|;
-block|}
 else|else
 block|{
-return|return
+name|os
+operator|=
 name|response
 operator|.
 name|getOutputStream
 argument_list|()
-return|;
+expr_stmt|;
 block|}
+block|}
+return|return
+name|os
+return|;
 block|}
 annotation|@
 name|Override
