@@ -982,6 +982,151 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testScannerResultCodes
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Header
+index|[]
+name|headers
+init|=
+operator|new
+name|Header
+index|[
+literal|3
+index|]
+decl_stmt|;
+name|headers
+index|[
+literal|0
+index|]
+operator|=
+operator|new
+name|Header
+argument_list|(
+literal|"Content-Type"
+argument_list|,
+name|Constants
+operator|.
+name|MIMETYPE_XML
+argument_list|)
+expr_stmt|;
+name|headers
+index|[
+literal|1
+index|]
+operator|=
+operator|new
+name|Header
+argument_list|(
+literal|"Accept"
+argument_list|,
+name|Constants
+operator|.
+name|MIMETYPE_JSON
+argument_list|)
+expr_stmt|;
+name|headers
+index|[
+literal|2
+index|]
+operator|=
+operator|new
+name|Header
+argument_list|(
+literal|"Accept-Encoding"
+argument_list|,
+literal|"gzip"
+argument_list|)
+expr_stmt|;
+name|Response
+name|response
+init|=
+name|client
+operator|.
+name|post
+argument_list|(
+literal|"/"
+operator|+
+name|TABLE
+operator|+
+literal|"/scanner"
+argument_list|,
+name|headers
+argument_list|,
+literal|"<Scanner/>"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|response
+operator|.
+name|getCode
+argument_list|()
+argument_list|,
+literal|201
+argument_list|)
+expr_stmt|;
+name|String
+name|scannerUrl
+init|=
+name|response
+operator|.
+name|getLocation
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|scannerUrl
+argument_list|)
+expr_stmt|;
+name|response
+operator|=
+name|client
+operator|.
+name|get
+argument_list|(
+name|scannerUrl
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|response
+operator|.
+name|getCode
+argument_list|()
+argument_list|,
+literal|200
+argument_list|)
+expr_stmt|;
+name|response
+operator|=
+name|client
+operator|.
+name|get
+argument_list|(
+name|scannerUrl
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|response
+operator|.
+name|getCode
+argument_list|()
+argument_list|,
+literal|204
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
