@@ -169,6 +169,8 @@ Release 0.91.0 - Unreleased
    HBASE-4118  method regionserver.MemStore#updateColumnValue: the check for 
                qualifier and family is missing (N Keywal via Ted Yu)
    HBASE-4127  Don't modify table's name away in HBaseAdmin
+   HBASE-4105  Stargate does not support Content-Type: application/json and
+               Content-Encoding: gzip in parallel
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
